--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li> Numbered List</li>
             <li> Numbered List</li>
         </ol>
-        <p><a href = "ADD URL HERE"> click here</a></p>
+        <p><a href = "ADD URL HERE"> Click Here</a></p>
         <h5> copy; Name2022</h5>
     </body>
 </html>
