--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
         </style>
     </head>
     <body>
-        <h1> Header</h1>
-        <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo laboriosam ratione animi! Non, voluptate veniam quas consectetur sequi impedit debitis. Quisquam necessitatibus natus dolor eaque! Doloribus cumque animi a similique!</p>
-        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae cum recusandae quibusdam expedita magni hic aut quam pariatur, tempora voluptates deserunt ab corrupti, libero similique nihil in vitae eos non.</p>
-
-        <h2> Header</h2>
-        <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo laboriosam ratione animi! Non, voluptate veniam quas consectetur sequi impedit debitis. Quisquam necessitatibus natus dolor eaque! Doloribus cumque animi a similique!</p>
-        <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo laboriosam ratione animi! Non, voluptate veniam quas consectetur sequi impedit debitis. Quisquam necessitatibus natus dolor eaque! Doloribus cumque animi a similique!</p>
-        <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo laboriosam ratione animi! Non, voluptate veniam quas consectetur sequi impedit debitis. Quisquam necessitatibus natus dolor eaque! Doloribus cumque animi a similique!</p>
+        <div>
+            <h1> Header</h1>
+            <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo laboriosam ratione animi! Non, voluptate veniam quas consectetur sequi impedit debitis. Quisquam necessitatibus natus dolor eaque! Doloribus cumque animi a similique!</p>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae cum recusandae quibusdam expedita magni hic aut quam pariatur, tempora voluptates deserunt ab corrupti, libero similique nihil in vitae eos non.</p>
+    
+        </div>
+        <div>
+            <h2> Header</h2>
+            <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo laboriosam ratione animi! Non, voluptate veniam quas consectetur sequi impedit debitis. Quisquam necessitatibus natus dolor eaque! Doloribus cumque animi a similique!</p>
+            <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo laboriosam ratione animi! Non, voluptate veniam quas consectetur sequi impedit debitis. Quisquam necessitatibus natus dolor eaque! Doloribus cumque animi a similique!</p>
+            <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo laboriosam ratione animi! Non, voluptate veniam quas consectetur sequi impedit debitis. Quisquam necessitatibus natus dolor eaque! Doloribus cumque animi a similique!</p>
+    
+        </div>
         <ol>
             <li> Numbered List</li>
             <li> Numbered List</li>
