--- a/index.html
+++ b/index.html
@@ -3,21 +3,20 @@
         <title> Your Main Title</title>
         <style type = "text/css">
             body {background-color: whitesmoke}
-            h1 {font-family: 'Roboto', sans-serif; color: black}
-            h2 {color: whitesmoke}
-            p {font-family: 'Monsterrat', sans-serif; color: royalblue;}
-
+            h1  {font-family: 'Roboto', sans-serif; color: black}
+            h2  {font-family: 'Roboto', sans-serif; color: black}
+            p   {font-family: 'Roboto', sans-serif; color: black}
         </style>
     </head>
     <body>
         <div>
-            <h1> Header</h1>
+            <h1> The First Lorem</h1>
             <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo laboriosam ratione animi! Non, voluptate veniam quas consectetur sequi impedit debitis. Quisquam necessitatibus natus dolor eaque! Doloribus cumque animi a similique!</p>
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae cum recusandae quibusdam expedita magni hic aut quam pariatur, tempora voluptates deserunt ab corrupti, libero similique nihil in vitae eos non.</p>
     
         </div>
         <div>
-            <h2> Header</h2>
+            <h2> The Second Lorem</h2>
             <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo laboriosam ratione animi! Non, voluptate veniam quas consectetur sequi impedit debitis. Quisquam necessitatibus natus dolor eaque! Doloribus cumque animi a similique!</p>
             <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo laboriosam ratione animi! Non, voluptate veniam quas consectetur sequi impedit debitis. Quisquam necessitatibus natus dolor eaque! Doloribus cumque animi a similique!</p>
             <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo laboriosam ratione animi! Non, voluptate veniam quas consectetur sequi impedit debitis. Quisquam necessitatibus natus dolor eaque! Doloribus cumque animi a similique!</p>
