--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
     <head>
-        <title> Your Main Title</title>
-        <style type = "text/css">
-            body {background-color: whitesmoke}
-            h1 {font-family: 'Roboto', sans-serif; color: black}
-            h2  {font-family: 'Roboto', sans-serif; color: black}
-            p   {font-family: 'Roboto', sans-serif; color: black}
-        </style>
+        <title> Test</title>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Home Page</title>
+        <link rel ="stylesheet" href="styles.css">
+        
     </head>
     <body>
         <div>
