--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li> Numbered List</li>
             <li> Numbered List</li>
         </ol>
-        <p><a href = "ADD URL HERE"> Click Here</a></p>
-        <h5> copy; Name2022</h5>
+        <p><a href = "testingroom.html"> Click Here</a></p>
+        <h5> &copy; Name2022</h5>
     </body>
 </html>
