--- a/testingroom.html
+++ b/testingroom.html
@@ -1,5 +1,6 @@
 <link rel ="stylesheet" href="styles.css">
 
-<button
-    type="button">Tickle Me!
-</button> 
+<div class="text">
+    <input type="image" src="C:\Users\Tedd Giles\Desktop\Github Pages\PortfolioSite\Logo_DemenAtWork_LR.png"
+    class="text" name="backLogo" id="backLogo"/>
+</div>
