--- a/testingroom.html
+++ b/testingroom.html
@@ -1,6 +1,10 @@
 <link rel ="stylesheet" href="styles.css">
 
-<div class="text">
-    <input type="image" src="C:\Users\Tedd Giles\Desktop\Github Pages\PortfolioSite\Logo_DemenAtWork_LR.png"
-    class="text" name="backLogo" id="backLogo"/>
-</div>
+<button onclick="window.ocation.href = 'index.html';"()">
+    <img src="Logo_DemenAtWork_LR.png" />
+    
+    
+  </button>
+
+  
+  
