--- a/testingroom.html
+++ b/testingroom.html
@@ -1,10 +1,5 @@
 <link rel ="stylesheet" href="styles.css">
 
-<button onclick="window.ocation.href = 'index.html';"()">
+<button onclick="window.ocation.href = 'index.html';"()>
     <img src="Logo_DemenAtWork_LR.png" />
-    
-    
   </button>
-
-  
-  
