button got destroyed

--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <html>
+    <style>
+        img{
+            width:  70px;
+            height: 70;
+            
+        }
+    </style>
+    <img src="Logo_DemenAtWork_LR.png" style="padding: 5px 2px;">
     <head>
         <title> Test</title>
         <meta charset="UTF-8">
