--- a/testingroom.html
+++ b/testingroom.html
@@ -1,5 +1,3 @@
-<link rel ="stylesheet" href="styles.css">
-
-<button onclick="window.ocation.href = 'index.html';"()>
-    <img src="Logo_DemenAtWork_LR.png" />
+<button onclick="window.location.href = 'index.html';"()>
+  <img src="Logo_DemenAtWork_LR.png" />
 </button>
