--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
             
         }
     </style>
-    <img src="Logo_DemenAtWork_LR.png" style="padding: 5px 2px;">
+    <img src="Images/Logo_DemenAtWork_LR.png" style="padding: 5px 2px;">
     <head>
         <title> Test</title>
         <meta charset="UTF-8">
