--- a/testingroom.html
+++ b/testingroom.html
@@ -1,20 +1,38 @@
 <link rel ="stylesheet" href="styles.css">
-<div id="container">
+
 <div class="button__wrap">
   <button class="button btn1" onclick="window.location.href = 'index.html';" >
     <img src="Images/Logo_DemenAtWork_LR.png" />
   </button>
 </div>
+
 <div class="button__wrap">
-  <button class="button btn2" onclick="myFunction()">
-    <img src ="Images/button_1.png">
+  <button class="button btn2"
+
+  onclick="myFunction()">
+  <img src="Images/button_1.png"
+
+ 
+
   </button>
-  <div id="myDIV">
-    this is my div
-    </div>
 
 </div>
-</div>
+
+
+
+
+<script>
+  function myFunction() {
+    var x = document.getElementById("myDIV");
+    if (x.style.display === "none") {
+      x.style.display = "block";
+    } else {
+      x.style.display = "none";
+    }
+  }
+  </script>
+
+
 
 
 
