--- a/testingroom.html
+++ b/testingroom.html
@@ -7,10 +7,20 @@
 </div>
 
 <div class="button__wrap">
-  <button class="button btn2"
-
+  <button class="button btn2">
+    <div>
+      <div>
+        <img src="Images/button_1.png">
+      </div>
+      <div>
+        <img src="Images/button_CFM.png" width="auto">
+      </div>
+    </div>
+    
+  </button>
+  
   onclick="myFunction()">
-  <img src="Images/button_1.png"
+  
 
  
 
